--- a/.upptimerc.yml
+++ b/.upptimerc.yml
@@ -1,22 +1,20 @@
 # Change these first
-owner: upptime # Your GitHub organization or username, where this repository lives
+owner: yotamcuralife # Your GitHub organization or username, where this repository lives
 repo: upptime # The name of this repository
 
 sites:
-  - name: Google
-    url: https://www.google.com
-  - name: Wikipedia
-    url: https://en.wikipedia.org
-  - name: Hacker News
-    url: https://news.ycombinator.com
-  - name: Test Broken Site
-    url: https://thissitedoesnotexist.koj.co
+  - name: Curalife
+    url: https://www.curalife.com
+  - name: Curalife Global
+    url: https://global.curalife.com
+    
+assignees: yotamcuralife # Users to assign downtime issues (optional)
 
 status-website:
   # Add your custom domain name, or remove the `cname` line if you don't have a domain
   # Uncomment the `baseUrl` line if you don't have a custom domain and add your repo name there
-  cname: demo.upptime.js.org
-  # baseUrl: /your-repo-name
+  cname: uptime.curalife.com
+  baseUrl: /upptime
   logoUrl: https://raw.githubusercontent.com/upptime/upptime.js.org/master/static/img/icon.svg
   name: Upptime
   introTitle: "**Upptime** is the open-source uptime monitor and status page, powered entirely by GitHub."
